# proj_hello

./: .gitignore  CMakeLists.txt  hello.cpp
src/common/: kmath.cpp  kmath.h  kutils.cpp  kutils.h
src/kmeans/: CMakeLists.txt  kmeans.cpp  kmeans.h
src/kmeansxor/: CMakeLists.txt  kmeansxor.cpp  kmeansxor.h
src/mergeblocks/: CMakeLists.txt  merge.cpp
